# dlf

./: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  imagenet.cpp  main.cpp  mnist.cpp  optimize.cpp  synset.txt
dlf/: CMakeLists.txt  parallel.h
dlf/include/: cxxblas.h  eval.h  model.h  os_blas.h  parallel.h  pcg_extras.h  pcg_random.h  pcg_uint128.h  predict.h  randomize.h  tensor.h  utility.h
dlf/include/model/: graph.h  intern.h  node_list.h  operators.h  optimize.h  serialize.h
dlf/include/tensor/: aggregate.h  common.h  device.h  dnn.h  dnn_detail.h  host.h  image.h  linalg.h  linalg_detail.h  map.h  pad.h  reduce.h  reduce_detail.h  reorder.h  reorder_detail.h  shape.h  sorting.h  traits.h  transform.h  vml.h  xfn.h
dlf/src/model/: factory.cpp  intern.cpp  onnx.cpp  optimize.cpp  passes.hpp  serialize.cpp  shape_inference.cpp
dlf/src/tensor/: filter.cpp  range.cpp  schur.cpp  shape.cpp
dlf/tensor/: device.h  host.h  shape.cpp
dlf/test/: CMakeLists.txt  DNNTest.cpp  EulerTest.cpp  GPGPUTest.cpp  GPGPUTest.h  MatMulTest.cpp  RandomTest.cpp  ShapeTest.cpp  TensorTest.cpp  UniformTest.cpp  ViewTest.cpp  cl2cu.cl  test_utility.h
dlf/test/model/: AttributesTest.cpp  EvaluateTest.cpp  InternTest.cpp  PredictTest.cpp  SerializeTest.cpp  ShapeInferenceTest.cpp  TensorTest.cpp
gpgpu/: CMakeLists.txt
gpgpu/include/: gblas.h  gblas_half.h  gdnn.h  gpblas.h  gpblas_half.h  gpgpu.h
gpgpu/src/: api_common.cpp  cache.cpp  cache.hpp  cublas.hpp  cudnn.hpp  gblas.cpp  gdnn.cpp  gpblas.cpp  gpgpu.cpp  gpgpu_cl.cpp  gpgpu_cl.hpp  gpgpu_cu.cpp  gpgpu_cu.hpp  preprocessor.cpp  preprocessor.hpp  routine.cpp  routine.hpp
gpgpu/src/database/: apple_cpu_fallback.hpp  database.cpp  database.hpp  database_structure.hpp
gpgpu/src/database/kernels/copy/: copy.hpp  copy_16.hpp  copy_32.hpp  copy_3232.hpp  copy_64.hpp  copy_6464.hpp
gpgpu/src/database/kernels/gemm_routine/: gemm_routine.hpp  gemm_routine_16.hpp  gemm_routine_32.hpp  gemm_routine_3232.hpp  gemm_routine_64.hpp  gemm_routine_6464.hpp
gpgpu/src/database/kernels/invert/: invert.hpp  invert_16.hpp  invert_32.hpp  invert_3232.hpp  invert_64.hpp  invert_6464.hpp
gpgpu/src/database/kernels/pad/: pad.hpp  pad_16.hpp  pad_32.hpp  pad_3232.hpp  pad_64.hpp  pad_6464.hpp
gpgpu/src/database/kernels/padtranspose/: padtranspose.hpp  padtranspose_16.hpp  padtranspose_32.hpp  padtranspose_3232.hpp  padtranspose_64.hpp  padtranspose_6464.hpp
gpgpu/src/database/kernels/transpose/: transpose.hpp  transpose_16.hpp  transpose_32.hpp  transpose_3232.hpp  transpose_64.hpp  transpose_6464.hpp
gpgpu/src/database/kernels/trsv_routine/: trsv_routine.hpp  trsv_routine_16.hpp  trsv_routine_32.hpp  trsv_routine_3232.hpp  (+2 more)
gpgpu/src/kernels/: common.cl  opencl_to_cuda.cl
gpgpu/src/kernels/dnn/: complex.cl  local_merge.cl  mwc64x.cl  xabs.cl  xactivation.cl  xadd.cl  xargmax.cl  xargreduce.cl  xbatch_norm.cl  xbinary.cl  xcopy.cl  xdiv.cl  xfill.cl  xgather.cl  xhardmax.cl  xmerge.cl  xmul.cl  xneg.cl  xnorm.cl  xonehot.cl  xpool.cl  xpow.cl  xrandom.cl  xrange.cl  xreduce.cl  xresize.cl  xreverse.cl  xscan.cl  xsign.cl  xsoftmax.cl  xsort.cl  xsub.cl  xtopk.cl  xtransform.cl  xtransform2.cl  xtransform_b.cl  xtransform_c.cl  xtransform_p.cl  xwhere.cl
gpgpu/src/kernels/level1/: xamax.cl  xasum.cl  xcopy.cl  xdot.cl  xnrm2.cl
gpgpu/src/kernels/level2/: xgemv.cl  xgemv_fast.cl
gpgpu/src/kernels/level3/: invert_diagonal_blocks_part1.cl  invert_diagonal_blocks_part2.cl  xgemm_batched.cl  xgemm_part4.cl
gpgpu/src/kernels/levelx/: im2col.cl  xclamp.cl  xconvgemm_part1.cl  xconvgemm_part2.cl  xgetrf.cl
gpgpu/src/routines/: common.cpp  common.hpp  routines.hpp
gpgpu/src/routines/dnn/: xabs.cpp  xabs.hpp  xactivation.cpp  xactivation.hpp  xadd.cpp  xadd.hpp  xargmax.cpp  xargmax.hpp  xargreduce.cpp  xargreduce.hpp  xargsort.cpp  xargsort.hpp  xbatch_norm.cpp  xbatch_norm.hpp  xbinary.cpp  xbinary.hpp  xcopy.cpp  xcopy.hpp  xdiv.cpp  xdiv.hpp  xfill.cpp  xfill.hpp  xgather.cpp  xgather.hpp  xhardmax.cpp  xhardmax.hpp  xmerge.cpp  xmerge.hpp  xmul.cpp  xmul.hpp  xneg.cpp  xneg.hpp  xnorm.cpp  xnorm.hpp  xonehot.cpp  xonehot.hpp  xpool.cpp  xpool.hpp  xpow.cpp  xpow.hpp  (+32 more)
gpgpu/src/routines/level1/: xamax.cpp  xamax.hpp  xamin.hpp  xasum.cpp  xasum.hpp  xaxpy.cpp  xaxpy.hpp  xcopy.cpp  xcopy.hpp  xdot.cpp  xdot.hpp  xdotc.cpp  xdotc.hpp  xdotu.cpp  xdotu.hpp  xmax.hpp  xmin.hpp  xnrm2.cpp  xnrm2.hpp  xscal.cpp  xscal.hpp  xsum.hpp  xswap.cpp  xswap.hpp
gpgpu/src/routines/level2/: xgbmv.cpp  xgbmv.hpp  xgemv.cpp  xgemv.hpp  xger.cpp  xger.hpp  xgerc.cpp  xgerc.hpp  xgeru.cpp  xgeru.hpp  xhbmv.cpp  xhbmv.hpp  xhemv.cpp  xhemv.hpp  xher.cpp  xher.hpp  xher2.cpp  xher2.hpp  xhpmv.cpp  xhpmv.hpp  xhpr.cpp  xhpr.hpp  xhpr2.cpp  xhpr2.hpp  xsbmv.cpp  xsbmv.hpp  xspmv.cpp  xspmv.hpp  xspr.cpp  xspr.hpp  xspr2.cpp  xspr2.hpp  xsymv.cpp  xsymv.hpp  xsyr.cpp  xsyr.hpp  xsyr2.cpp  xsyr2.hpp  xtbmv.cpp  xtbmv.hpp  (+6 more)
gpgpu/src/routines/level3/: xgemm.cpp  xgemm.hpp  xhemm.cpp  xhemm.hpp  xher2k.cpp  xher2k.hpp  xherk.cpp  xherk.hpp  xsymm.cpp  xsymm.hpp  xsyr2k.cpp  xsyr2k.hpp  xsyrk.cpp  xsyrk.hpp  xtrmm.cpp  xtrmm.hpp  xtrsm.cpp  xtrsm.hpp
gpgpu/src/routines/levelx/: xaxpybatched.cpp  xaxpybatched.hpp  xclamp.cpp  xclamp.hpp  xcol2im.cpp  xcol2im.hpp  xconvgemm.cpp  xconvgemm.hpp  xgemmbatched.cpp  xgemmbatched.hpp  xgemmstridedbatched.cpp  xgemmstridedbatched.hpp  xgetrf.cpp  xgetrf.hpp  xhad.cpp  xhad.hpp  xim2col.cpp  xim2col.hpp  xinvert.cpp  xinvert.hpp  xomatcopy.cpp  xomatcopy.hpp
gpgpu/src/utilities/: buffer_test.hpp  compile.cpp  compile.hpp  device_mapping.hpp  exceptions.cpp  exceptions.hpp  utilities.cpp  utilities.hpp
src/: CMakeLists.txt  concurrent.h  example.cpp  fibonacci.h  gpgpu.h  onnx.proto  os_blas.h  stack.h  tensor.cpp  tensor.h  threadpool.cpp
src/gpgpu/: cl.cpp  cl.hpp  cu.cpp  cu.hpp  gpgpu.cpp
src/tensor/: device.h  host.h  shape.cpp  shape.h
test/: CMakeLists.txt  EulerTest.cpp  GPGPUTest.cpp  TensorTest.cpp  euler.cl  fibonacci_test.cpp  main.cpp  stack_test.cpp  test_utility.h  utility.h
(+59 files in other folders)
